Added pricing and sign-up pages.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   	<nav class="nav">
       <ul class="list-group text-left">
         <li><a class="island-1-2 pad-b 1-2" href="index.html">Home</a></li>
-        <li><a class="island-1-2 pad-b 1-2" href="index.html">Tour</a></li>
-        <li><a class="island-1-2" href="moons.html">Prices & Plans</a></li>
-        <li><a class="island-1-2" href="exploration.html">Sign-Up</a></li>
+        <li><a class="island-1-2 pad-b 1-2" href="tour.html">Tour</a></li>
+        <li><a class="island-1-2" href="prices.html">Prices & Plans</a></li>
+        <li><a class="island-1-2" href="payment.html">Sign-Up</a></li>
       </ul>
   	</nav>
   </div>
@@ -39,7 +39,7 @@
       </div>
       <div class="widthb center">
         <p class="giga">Space for cooking enthusiasts to store recipes.</p>
-        <a href="#" class="btn white">Get Cooking</a>
+        <a href="payment.html" class="btn white">Get Cooking</a>
       </div>
     </div>
 </header>
@@ -51,7 +51,7 @@
       <p class="text-left">With the Virtual Cookbook you can browse thousands of recipies, upload and share your own, and make thousands of unique dishes.</p>
     </div>
     <div class="text-center">
-      <a href="#" class="btn white center">Take a Tour</a>
+      <a href="tour.html" class="btn white center">Take a Tour</a>
     </div>
   </div>
 
@@ -71,7 +71,7 @@
       <p class="text-left">Sign up now and begin cooking today!</p>
     </div>
     <div class="text-center">
-      <a href="#" class="btn white center">Get Cooking</a>
+      <a href="payment.html" class="btn white center">Get Cooking</a>
     </div>
   </div>
 </main>
