Added thank you and pricing page.

--- a/tour.html
+++ b/tour.html
@@ -31,10 +31,11 @@
     </div>
   </header>
     <main class="grid grid-middle black">
+      <h1 class="unit xs-1 s-1 m-1 l-1 xl-1 tera gutter text-center pad-t-1-2">Take a Tour</h1>
       <div class="tour unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
           <h2 class="giga text-center">Build Your Collection</h2>
-          <p class="text-left">Build your own collection of recipies by saving recipies you like to your own cookbook to make anytime you like.</p>
+          <p class="text-left">Build your own collection of recipies by the saving recipies you like to your own cookbook to make anytime you like.</p>
         </div>
         <div class="text-center">
           <a href="#" class="btn white center">Sign Up Now!</a>
@@ -70,7 +71,9 @@
           <a href="#" class="btn white center">Sign Up Now!</a>
         </div>
       </div>
+    </main>
 
+    <footer class="grid grid-middle black">
       <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
         <div>
           <h2 class="giga text-center">Sign Up Now</h2>
@@ -80,7 +83,6 @@
           <a href="#" class="btn white center">Get Cooking</a>
         </div>
       </div>
-    </main>
-
+    </footer>
 </body>
 </html>
