--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
       <a href="#" class="btn white center">Learn  More</a>
     </div>
   </div>
+</main>
 
+<footer class="grid grid-middle black">
   <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
     <div>
       <h2 class="giga text-center">Sign Up Now</h2>
       <p class="text-left">Sign up now and begin cooking today!</p>
     </div>
     <div class="text-center">
-      <a href="payment.html" class="btn white center">Get Cooking</a>
+      <a href="#" class="btn white center">Get Cooking</a>
     </div>
   </div>
-</main>
-
-
+</footer>
 
 </body>
 </html>
