--- a/payment.html
+++ b/payment.html
@@ -32,45 +32,58 @@
   </header>
 
 <main>
-  <div class="price pad-b-1-2">
+  <div class="price pad-b-1-2 price">
   <h1 class="giga gutter pad-t-1-2">Payment Information</h1>
 
   <form class="grid gutter">
-  <div class="unit">
-    <div class="pad-t-1-2">First name</div>
-    <input type="text" name="firstname">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2">
+      <div class="pad-t-1-2">First name</div>
+      <input type="text" name="firstname">
 
-    <div class="pad-t-1-2">Last name</div>
-    <input type="text" name="lastname">
+      <div class="pad-t-1-2">Last name</div>
+      <input type="text" name="lastname">
 
-    <div class="pad-t-1-2">Email Address</div>
-    <input type="text" name="email address">
+      <div class="pad-t-1-2">Email Address</div>
+      <input type="text" name="email address">
 
-    <div class="pad-t-1-2">Confirm Email Address</div>
-    <input type="text" name="confirm email address">
+      <div class="pad-t-1-2">Confirm Email Address</div>
+      <input type="text" name="confirm email address">
 
-    <div class="pad-t-1-2">Password</div>
-    <input type="text" name="Password">
+      <div class="pad-t-1-2">Password</div>
+      <input type="text" name="Password">
 
-    <div class="pad-t-1-2">Confirm Password Number</div>
-    <input type="text" name="Confirm Password">
+      <div class="pad-t-1-2">Confirm Password Number</div>
+      <input type="text" name="Confirm Password">
+    </div>
 
-    <div class="pad-t-1-2">Phone Number</div>
-    <input type="text" name="Phone Number">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2">
+      <div class="pad-t-1-2">Phone Number</div>
+      <input type="text" name="Phone Number">
 
-    <div class="pad-t-1-2">Plan Type</div>
-    <input type="text" name="Plan">
+      <div class="pad-t-1-2">Plan Type</div>
+      <input type="text" name="Plan">
 
-    <div class="pad-t-1-2">Credit Card Number</div>
-    <input type="text" name="Credit Card Number">
+      <div class="pad-t-1-2">Credit Card Number</div>
+      <input type="text" name="Credit Card Number">
 
-    <div class="pad-t-1-2">Expiry Date</div>
-    <input type="text" name="Expiry Date">
+      <div class="pad-t-1-2">Expiry Date</div>
+      <input type="text" name="Expiry Date">
 
-    <div class="pad-t-1-2">Security Code</div>
-    <input type="text" name="Security Code">
+      <div class="pad-t-1-2">Security Code</div>
+      <input type="text" name="Security Code">
+    <div>
   </form>
-  <div>
 </main>
+<footer class="grid grid-middle black">
+  <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
+    <div>
+      <h2 class="giga text-center">Almost There!</h2>
+      <p class="text-left">Finish signing up and begin cooking today!</p>
+    </div>
+    <div class="text-center">
+      <a href="thank-you.html" class="btn white center">Submit</a>
+    </div>
+  </div>
+</footer
 </body>
 </html>
