Moved footer text from the left to the center.

--- a/tour.html
+++ b/tour.html
@@ -77,7 +77,7 @@
       <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
         <div>
           <h2 class="giga text-center">Sign Up Now</h2>
-          <p class="text-left">Sign up now and begin cooking today!</p>
+          <p class="text-center">Sign up now and begin cooking today!</p>
         </div>
         <div class="text-center">
           <a href="#" class="btn white center">Get Cooking</a>
