--- a/payment.html
+++ b/payment.html
@@ -78,7 +78,7 @@
   <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
     <div>
       <h2 class="giga text-center">Almost There!</h2>
-      <p class="text-left">Finish signing up and begin cooking today!</p>
+      <p class="text-center">Finish signing up and begin cooking today!</p>
     </div>
     <div class="text-center">
       <a href="thank-you.html" class="btn white center">Submit</a>
