--- a/tour.html
+++ b/tour.html
@@ -15,6 +15,12 @@
 </head>
 
 <body>
+
+<ul class="skip-links">
+  <li><a href="#">Skip to main content</a></li>
+  <li><a href="#">Skip to navigation</a></li>
+</ul>
+
   <header class="masthead grid grid-middle text-center white">
       <div class="unit">
       <input type="checkbox" class="nav-check" id="nav-check">
