linked my prices page to my index.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <p class="text-left">Make your account for free or choose a premium account to getexclusive benefits and more storage space for recipies</p>
     </div>
     <div class="text-center">
-      <a href="#" class="btn white center">Learn  More</a>
+      <a href="prices.html" class="btn white center">Learn  More</a>
     </div>
   </div>
 </main>
