Added a footer to the pages.

--- a/prices.html
+++ b/prices.html
@@ -43,16 +43,19 @@
 </div>
 
 </main>
-    <footer class="grid grid-middle black">
-      <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
-        <div>
-          <h2 class="giga text-center">Sign Up Now</h2>
-          <p class="text-center">Sign up now and begin cooking today!</p>
-        </div>
-        <div class="text-center">
-          <a href="#" class="btn white center">Get Cooking</a>
-        </div>
-      </div>
-    </footer>
+<footer class="grid grid-middle black">
+  <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
+    <div>
+      <h2 class="giga text-center">Sign Up Now</h2>
+      <p class="text-left">Sign up now and begin cooking today!</p>
+    </div>
+    <div class="text-center">
+      <a href="#" class="btn white center">Get Cooking</a>
+    </div>
+  </div>
+  <div class="unit" role="contentinfo">
+    <p>© 2015 SAAS
+  </div>
+</footer>
 </body>
 </html>
