--- a/payment.html
+++ b/payment.html
@@ -77,13 +77,16 @@
 <footer class="grid grid-middle black">
   <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
     <div>
-      <h2 class="giga text-center">Almost There!</h2>
-      <p class="text-center">Finish signing up and begin cooking today!</p>
+      <h2 class="giga text-center">Sign Up Now</h2>
+      <p class="text-left">Sign up now and begin cooking today!</p>
     </div>
     <div class="text-center">
-      <a href="thank-you.html" class="btn white center">Submit</a>
+      <a href="#" class="btn white center">Get Cooking</a>
     </div>
   </div>
-</footer
+  <div class="unit" role="contentinfo">
+    <p>© 2015 SAAS
+  </div>
+</footer>
 </body>
 </html>
