Added skip links.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
 
 <ul class="skip-links">
-  <li><a href="#">Skip to main content</a></li>
-  <li><a href="#">Skip to navigation</a></li>
+  <li><a href="#main">Skip to main content</a></li>
+  <li><a href="#nav">Skip to navigation</a></li>
 </ul>
 
 <header class="masthead grid grid-middle text-center white">
@@ -79,7 +79,7 @@
       <p class="text-left">Sign up now and begin cooking today!</p>
     </div>
     <div class="text-center">
-      <a href="#" class="btn white center">Get Cooking</a>
+      <a href="payment.html" class="btn white center">Get Cooking</a>
     </div>
   </div>
   <div class="unit" role="contentinfo">
