--- a/payment.html
+++ b/payment.html
@@ -81,7 +81,7 @@
       <p class="text-left">Sign up now and begin cooking today!</p>
     </div>
     <div class="text-center">
-      <a href="#" class="btn white center">Get Cooking</a>
+      <a href="thank-you.html" class="btn white center">Get Cooking</a>
     </div>
   </div>
   <div class="unit" role="contentinfo">
