--- a/tour.html
+++ b/tour.html
@@ -17,8 +17,8 @@
 <body>
 
 <ul class="skip-links">
-  <li><a href="#">Skip to main content</a></li>
-  <li><a href="#">Skip to navigation</a></li>
+  <li><a href="#main">Skip to main content</a></li>
+  <li><a href="#nav">Skip to navigation</a></li>
 </ul>
 
   <header class="masthead grid grid-middle text-center white">
@@ -36,7 +36,7 @@
     	</nav>
     </div>
   </header>
-    <main class="grid grid-middle black">
+    <main class="grid grid-middle black" id="main" role="main">
       <h1 class="unit xs-1 s-1 m-1 l-1 xl-1 tera gutter text-center pad-t-1-2">Take a Tour</h1>
       <div class="tour unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
@@ -44,7 +44,7 @@
           <p class="text-left">Build your own collection of recipies by the saving recipies you like to your own cookbook to make anytime you like.</p>
         </div>
         <div class="text-center">
-          <a href="#" class="btn white center">Sign Up Now!</a>
+          <a href="payment.html" class="btn white center">Sign Up Now!</a>
         </div>
       </div>
 
@@ -54,7 +54,7 @@
           <p class="text-left">Browse through other user’s public cookbooks and find new and unique recipies for you to make and try yourself.</p>
         </div>
         <div class="text-center">
-          <a href="#" class="btn white center">Sign Up Now!</a>
+          <a href="payment.html" class="btn white center">Sign Up Now!</a>
         </div>
       </div>
 
@@ -64,7 +64,7 @@
           <p class="text-left">Customize the colour, fonts, and layout of your cookbook. Organize the recipies in your cookbook anyway you like.</p>
         </div>
         <div class="text-center">
-          <a href="#" class="btn white center">Sign Up Now!</a>
+          <a href="payment.html" class="btn white center">Sign Up Now!</a>
         </div>
       </div>
 
@@ -74,7 +74,7 @@
           <p class="text-left">Upload and share any of your own recipies you've created for other users to download, use, and comment on.</p>
         </div>
         <div class="text-center">
-          <a href="#" class="btn white center">Sign Up Now!</a>
+          <a href="payment.html" class="btn white center">Sign Up Now!</a>
         </div>
       </div>
     </main>
@@ -86,7 +86,7 @@
           <p class="text-left">Sign up now and begin cooking today!</p>
         </div>
         <div class="text-center">
-          <a href="#" class="btn white center">Get Cooking</a>
+          <a href="payment.html" class="btn white center">Get Cooking</a>
         </div>
       </div>
       <div class="unit" role="contentinfo">
