--- a/payment.html
+++ b/payment.html
@@ -20,7 +20,7 @@
       <input type="checkbox" class="nav-check" id="nav-check">
     	<!-- This is the button we’d click to open/close the navigation -->
     	<label class="nav-label island-1-2" for="nav-check">Menu</label>
-    	<nav class="nav">
+    	<nav class="nav role="navigation"">
         <ul class="list-group text-left">
           <li><a class="island-1-2 pad-b 1-2" href="index.html">Home</a></li>
           <li><a class="island-1-2 pad-b 1-2" href="tour.html">Tour</a></li>
@@ -31,7 +31,7 @@
     </div>
   </header>
 
-<main>
+<main role="main">
   <div class="price pad-b-1-2 price">
   <h1 class="giga gutter pad-t-1-2">Payment Information</h1>
 
