--- a/thank-you.html
+++ b/thank-you.html
@@ -14,7 +14,7 @@
   <link href="css/colour.css" rel="stylesheet">
 </head>
 
-<body class="grid">
+<body class="grid role="main"">
   <main class="unit island-1-2">
     <h1 class="giga">Thank You!</h1>
     <p>An email will be in your inbox shortly with your validation code.</p>
