--- a/tour.html
+++ b/tour.html
@@ -26,7 +26,7 @@
       <input type="checkbox" class="nav-check" id="nav-check">
     	<!-- This is the button we’d click to open/close the navigation -->
     	<label class="nav-label island-1-2" for="nav-check">Menu</label>
-    	<nav class="nav">
+    	<nav class="nav role="navigation"">
         <ul class="list-group text-left">
           <li><a class="island-1-2 pad-b 1-2" href="index.html">Home</a></li>
           <li><a class="island-1-2 pad-b 1-2" href="tour.html">Tour</a></li>
