Added the rest of the accessibility tools.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <li><a href="#nav">Skip to navigation</a></li>
 </ul>
 
-<header class="masthead grid grid-middle text-center white">
+<header id="top" class="masthead grid grid-middle text-center white">
     <div class="unit">
     <input type="checkbox" class="nav-check" id="nav-check">
   	<!-- This is the button we’d click to open/close the navigation -->
@@ -79,11 +79,11 @@
       <p class="text-left">Sign up now and begin cooking today!</p>
     </div>
     <div class="text-center">
-      <a href="payment.html" class="btn white center">Get Cooking</a>
+      <a href="payment.html" aria-label="Sign-Up now and get cooking" class="btn white center">Get Cooking</a>
     </div>
   </div>
   <div class="unit" role="contentinfo">
-    <p>© 2015 SAAS
+    <p>© 2015 SAAS <a href="#top">Top</a></p>
   </div>
 </footer>
 
