--- a/payment.html
+++ b/payment.html
@@ -15,12 +15,18 @@
 </head>
 
 <body>
-  <header class="masthead grid grid-middle text-center white">
+
+<ul class="skip-links">
+  <li><a href="#main">Skip to main content</a></li>
+  <li><a href="#nav">Skip to navigation</a></li>
+</ul>
+
+  <header id="top" class="masthead grid grid-middle text-center white">
       <div class="unit">
       <input type="checkbox" class="nav-check" id="nav-check">
     	<!-- This is the button we’d click to open/close the navigation -->
     	<label class="nav-label island-1-2" for="nav-check">Menu</label>
-    	<nav class="nav role="navigation"">
+    	<nav class="nav" role="navigation">
         <ul class="list-group text-left">
           <li><a class="island-1-2 pad-b 1-2" href="index.html">Home</a></li>
           <li><a class="island-1-2 pad-b 1-2" href="tour.html">Tour</a></li>
@@ -31,7 +37,7 @@
     </div>
   </header>
 
-<main role="main">
+<main id="main" role="main">
   <div class="price pad-b-1-2 price">
   <h1 class="giga gutter pad-t-1-2">Payment Information</h1>
 
@@ -81,11 +87,11 @@
       <p class="text-left">Sign up now and begin cooking today!</p>
     </div>
     <div class="text-center">
-      <a href="thank-you.html" class="btn white center">Get Cooking</a>
+      <a href="thank-you.html" aria-label="Sign-Up now and get cooking" class="btn white center">Get Cooking</a>
     </div>
   </div>
   <div class="unit" role="contentinfo">
-    <p>© 2015 SAAS
+    <p>© 2015 SAAS <a href="#top">Top</a></p>
   </div>
 </footer>
 </body>
