--- a/prices.html
+++ b/prices.html
@@ -21,12 +21,12 @@
   <li><a href="#nav">Skip to navigation</a></li>
 </ul>
 
-  <header class="masthead grid grid-middle text-center white">
+  <header id="top" class="masthead grid grid-middle text-center white">
       <div class="unit">
       <input type="checkbox" class="nav-check" id="nav-check">
     	<!-- This is the button we’d click to open/close the navigation -->
     	<label class="nav-label island-1-2" for="nav-check">Menu</label>
-    	<nav class="nav" role="navigation">
+    	<nav class="nav" id="nav" role="navigation">
         <ul class="list-group text-left">
           <li><a class="island-1-2 pad-b 1-2" href="index.html">Home</a></li>
           <li><a class="island-1-2 pad-b 1-2" href="tour.html">Tour</a></li>
@@ -50,11 +50,11 @@
       <p class="text-left">Sign up now and begin cooking today!</p>
     </div>
     <div class="text-center">
-      <a href="payment.html" class="btn white center">Get Cooking</a>
+      <a href="payment.html" aria-label="Sign-Up now and get cooking" class="btn white center">Get Cooking</a>
     </div>
   </div>
   <div class="unit" role="contentinfo">
-    <p>© 2015 SAAS
+    <p>© 2015 SAAS <a href="#top">Top</a></p>
   </div>
 </footer>
 </body>
