linked thank you page.

--- a/payment.html
+++ b/payment.html
@@ -109,6 +109,10 @@
     <div>
       <button type="submit">Submit!</button>
     </div>
+
+    <input type="hidden" name="_next"
+      value="http://kyle-jackson.github.io/dsn1675-saas-website/thank-you.html">
+
   </form>
 </main>
 
