Added closing fieldset tag.

--- a/payment.html
+++ b/payment.html
@@ -100,7 +100,8 @@
 
       <input id="no" type="radio" name="answer">
       <label for="no">No</label>
-
+    </fieldset>
+    
     <div>
       <label for="message">Message</label>
       <textarea id="message"></textarea>
