Changed the colour of the footer and pre-footer.

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 </ul>
 
 <header id="top" class="masthead grid grid-middle text-center white">
-    <div class="unit">
+    <div class="unit xs-1 text-right">
     <input type="checkbox" class="nav-check" id="nav-check">
   	<!-- This is the button we’d click to open/close the navigation -->
   	<label class="nav-label island-1-2" for="nav-check">Menu</label>
   	<nav class="nav" id="nav" role="navigation">
-      <ul class="list-group text-left">
-        <li><a class="island-1-2 pad-b 1-2" href="index.html">Home</a></li>
-        <li><a class="island-1-2 pad-b 1-2" href="tour.html">Tour</a></li>
-        <li><a class="island-1-2" href="prices.html">Prices & Plans</a></li>
-        <li><a class="island-1-2" href="payment.html">Sign-Up</a></li>
+      <ul class="list-group text-right">
+        <li><a class="island-1-2 inline-block pad-b 1-2" href="index.html">Home</a></li>
+        <li><a class="island-1-2 inline-block pad-b 1-2" href="tour.html">Tour</a></li>
+        <li><a class="island-1-2 inline-block pad-b-1-2" href="prices.html">Prices & Plans</a></li>
+        <li><a class="island-1-2 inline-block pad-b-1-2" href="payment.html">Sign-Up</a></li>
       </ul>
   	</nav>
   </div>
@@ -51,6 +51,11 @@
 </header>
 
 <main class="grid grid-middle" id="main" role="main">
+
+  <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
+
+  </div>
+
   <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
     <div>
       <h2 class="giga text-center">What is it?</h2>
@@ -73,7 +78,7 @@
 </main>
 
 <footer class="grid grid-middle black">
-  <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
+  <div class="prefooter unit xs-1 s-1 m-1 l-1 island gutter">
     <div>
       <h2 class="giga text-center">Sign Up Now</h2>
       <p class="text-left">Sign up now and begin cooking today!</p>
@@ -82,7 +87,7 @@
       <a href="payment.html" aria-label="Sign-Up now and get cooking" class="btn white center">Get Cooking</a>
     </div>
   </div>
-  <div class="unit" role="contentinfo">
+  <div class="unit xs-1 text-center footer white pad-t-1-2" role="contentinfo">
     <p>© 2015 SAAS <a href="#top">Top</a></p>
   </div>
 </footer>
