--- a/tour.html
+++ b/tour.html
@@ -22,24 +22,24 @@
 </ul>
 
   <header id="top" class="masthead grid grid-middle text-center white">
-      <div class="unit">
+    <div class="unit xs-1 text-right">
       <input type="checkbox" class="nav-check" id="nav-check">
     	<!-- This is the button we’d click to open/close the navigation -->
     	<label class="nav-label island-1-2" for="nav-check">Menu</label>
     	<nav class="nav" id="nav" role="navigation">
-        <ul class="list-group text-left">
-          <li><a class="island-1-2 pad-b 1-2" href="index.html">Home</a></li>
-          <li><a class="island-1-2 pad-b 1-2" href="tour.html">Tour</a></li>
-          <li><a class="island-1-2" href="prices.html">Prices & Plans</a></li>
-          <li><a class="island-1-2" href="payment.html">Sign-Up</a></li>
+        <ul class="list-group text-right">
+          <li><a class="island-1-2 inline-block pad-b 1-2" href="index.html">Home</a></li>
+          <li><a class="island-1-2 inline-block pad-b 1-2" href="tour.html">Tour</a></li>
+          <li><a class="island-1-2 inline-block pad-b-1-2" href="prices.html">Prices & Plans</a></li>
+          <li><a class="island-1-2 inline-block pad-b-1-2" href="payment.html">Sign-Up</a></li>
         </ul>
     	</nav>
     </div>
   </header>
     <main class="grid grid-middle black" id="main" role="main">
-      <h1 class="unit xs-1 s-1 m-1 l-1 xl-1 tera gutter text-center pad-t-1-2">Take a Tour</h1>
-          <div class="unit island">
-            <a href="payment.html" class="btn white text-center">Sign Up Now!</a>
+        <div class="unit island  xs-1 s-1 m-1 l-1 xl-1 gutter text-center pad-t-1-2">
+            <h1 class="tera">Take a Tour</h1>
+            <a href="payment.html" aria-label="Sign-Up now" class="btn white center">Sign Up!</a>
         </div>
       <div class="tour unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
@@ -71,7 +71,7 @@
     </main>
 
     <footer class="grid grid-middle black">
-      <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
+      <div class="prefooter unit xs-1 s-1 m-1 l-1 island gutter">
         <div>
           <h2 class="giga text-center">Sign Up Now</h2>
           <p class="text-left">Sign up now and begin cooking today!</p>
@@ -80,7 +80,7 @@
           <a href="payment.html" aria-label="Sign-Up now and get cooking" class="btn white center">Get Cooking</a>
         </div>
       </div>
-      <div class="unit" role="contentinfo">
+      <div class="unit xs-1 text-center footer white pad-t-1-2" role="contentinfo">
         <p>© 2015 SAAS <a href="#top">Top</a></p>
       </div>
     </footer>
