Adjusted the footer background colours.

--- a/payment.html
+++ b/payment.html
@@ -112,14 +112,14 @@
       <input id="no" type="radio" name="answer">
       <label for="no">No</label>
     </fieldset>
+  </div>
 
-    <div>
+    <div class="unit xs-1 text-center btn">
       <button type="submit">Submit!</button>
     </div>
 
     <input type="hidden" name="_next"
       value="http://kyle-jackson.github.io/dsn1675-saas-website/thank-you.html">
-    </div>
   </form>
 </main>
 
