--- a/index.html
+++ b/index.html
@@ -44,17 +44,13 @@
         </h1>
       </div>
       <div class="widthb center">
-        <p class="giga">Space for cooking enthusiasts to store recipes.</p>
+        <p class="caption giga">Space for cooking enthusiasts to store recipes.</p>
         <a href="payment.html" class="btn white">Get Cooking</a>
       </div>
     </div>
 </header>
 
 <main class="grid grid-middle" id="main" role="main">
-
-  <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
-
-  </div>
 
   <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
     <div>
