--- a/prices.html
+++ b/prices.html
@@ -38,8 +38,8 @@
   </header>
 
 <main role="main">
-  <div class="price pad-b-1-2 price" id="main">
-  <h1 class="giga gutter pad-t-1-2">What We Offer</h1>
+  <div class="price pad-b-1-2 price text-center" id="main">
+  <h1 class="exa gutter pad-t-1-2">What We Offer</h1>
 </div>
 
 </main>
