--- a/tour.html
+++ b/tour.html
@@ -38,7 +38,8 @@
   </header>
     <main class="grid grid-middle black" id="main" role="main">
         <div class="unit island  xs-1 s-1 m-1 l-1 xl-1 gutter text-center pad-t-1-2">
-            <h1 class="tera">Take a Tour</h1>
+            <h1>Take a Tour</h1>
+            <p class="text-center giga">See what we can offer!</p>
             <a href="payment.html" aria-label="Sign-Up now" class="btn white center">Sign Up!</a>
         </div>
       <div class="tour unit xs-1 s-1 m-1 l-1-2 island gutter">
