Added icons to the tour page.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
   <div class="tour unit xs-1 s-1 m-1 l-1 island gutter">
     <div>
+      <img class="svg left" src="images/question.svg" alt="question mark icon" />
       <h2 class="giga text-center">What is it?</h2>
       <p class="text-left">With the Virtual Cookbook you can browse thousands of recipies, upload and share your own, and make thousands of unique dishes.</p>
     </div>
@@ -64,6 +65,7 @@
 
   <div class="price unit xs-1 s-1 m-1 l-1 island gutter">
     <div>
+      <img class="svg left" src="images/money.svg" alt="dollar sign icon" />
       <h2 class="giga text-center">Pricing & Plans</h2>
       <p class="text-left">Make your account for free or choose a premium account to getexclusive benefits and more storage space for recipies</p>
     </div>
@@ -83,8 +85,8 @@
       <a href="payment.html" aria-label="Sign-Up now and get cooking" class="btn white center">Get Cooking</a>
     </div>
   </div>
-  <div class="unit xs-1 text-center footer white pad-t-1-2" role="contentinfo">
-    <p>© 2015 SAAS <a href="#top">Top</a></p>
+  <div class="unit xs-1 text-center footer white island-1-2" role="contentinfo">
+    <p class="push-none">© 2015 SAAS <a href="#top">Top</a></p>
   </div>
 </footer>
 
