--- a/prices.html
+++ b/prices.html
@@ -38,10 +38,34 @@
   </header>
 
 <main role="main">
-  <div class="price pad-b-1-2 price text-center" id="main">
-  <h1 class="exa gutter pad-t-1-2">What We Offer</h1>
+  <div class="price island-2 price text-center" id="main">
+  <h1 class="tera gutter pad-t-1-2">What We Offer</h1>
+  <p class="text-center mega">We've got the package that's right for you!</p>
+  <a href="payment.html" aria-label="Sign-Up now" class="btn white center">Sign Up!</a>
 </div>
 
+<div class="grid">
+<div class="tour pad-t-1-2 pad-b-1-2 unit xs-1 s-1-2">
+    <h3 class="giga push-none text-center">Freemium</h3>
+  </div>
+  <div class="ltgrey pad-t-1-2 pad-b-1-2 unit xs-1 s-1-2">
+    <p class="text-left push-none gutter">One month free, the virtual cookbook can hold 50 recipes.</p>
+  </div>
+
+<div class="tour pad-t-1-2 pad-b-1-2 unit xs-1 s-1-2">
+    <h3 class="giga push-none text-center">$10/Month</h3>
+  </div>
+  <div class="ltgrey pad-t-1-2 pad-b-1-2 unit xs-1 s-1-2">
+    <p class="text-left push-none gutter">One month free, the virtual cookbook can hold 50 recipes.</p>
+  </div>
+
+  <div class="tour pad-t-1-2 pad-b-1-2 unit xs-1 s-1-2">
+      <h3 class="giga push-none text-center">$20/Month</h3>
+    </div>
+    <div class="ltgrey pad-t-1-2 pad-b-1-2 unit xs-1 s-1-2">
+      <p class="text-left push-none gutter">One month free, the virtual cookbook can hold 50 recipes.</p>
+    </div>
+  </div>
 </main>
 <footer class="grid grid-middle black">
   <div class="prefooter unit xs-1 s-1 m-1 l-1 island gutter">
@@ -53,8 +77,8 @@
       <a href="payment.html" aria-label="Sign-Up now and get cooking" class="btn white center">Get Cooking</a>
     </div>
   </div>
-  <div class="unit xs-1 text-center footer white pad-t-1-2" role="contentinfo">
-    <p>© 2015 SAAS <a href="#top">Top</a></p>
+  <div class="unit xs-1 text-center footer white island-1-2" role="contentinfo">
+    <p class="push-none">© 2015 SAAS <a href="#top">Top</a></p>
   </div>
 </footer>
 </body>
