--- a/tour.html
+++ b/tour.html
@@ -37,20 +37,22 @@
     </div>
   </header>
     <main class="grid grid-middle black" id="main" role="main">
-        <div class="unit island  xs-1 s-1 m-1 l-1 xl-1 gutter text-center pad-t-1-2">
-            <h1>Take a Tour</h1>
-            <p class="text-center giga">See what we can offer!</p>
+        <div class="unit island  xs-1 s-1 m-1 l-1 xl-1 gutter text-center island-2">
+            <h1 class="tera push-none">Take a Tour</h1>
+            <p class="text-center mega">See what we have to offer!</p>
             <a href="payment.html" aria-label="Sign-Up now" class="btn white center">Sign Up!</a>
         </div>
       <div class="tour unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
+          <img class="svgbig left" src="images/utencil.svg" alt="fory and knife icon" />
           <h2 class="giga text-center">Build Your Collection</h2>
           <p class="text-left">Build your own collection of recipies by the saving recipies you like to your own cookbook to make anytime you like.</p>
         </div>
       </div>
 
-      <div class="price unit xs-1 s-1 m-1 l-1-2 island gutter">
+      <div class="ltgrey unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
+          <img class="svgbig left" src="images/magnafyingglass.svg" alt="magnafying glass icon" />
           <h2 class="giga text-center">Discover Something New</h2>
           <p class="text-left">Browse through other user’s public cookbooks and find new and unique recipies for you to make and try yourself.</p>
         </div>
@@ -58,13 +60,15 @@
 
       <div class="tour unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
+          <img class="svgbig left" src="images/checkmark.svg" alt="checkmark icon icon" />
           <h2 class="giga text-center">Make Your's Unique</h2>
           <p class="text-left">Customize the colour, fonts, and layout of your cookbook. Organize the recipies in your cookbook anyway you like.</p>
         </div>
       </div>
 
-      <div class="price unit xs-1 s-1 m-1 l-1-2 island gutter">
+      <div class="ltgrey unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
+          <img class="svgbig left" src="images/star.svg" alt="star icon" />
           <h2 class="giga text-center">Show Off Your Skills</h2>
           <p class="text-left">Upload and share any of your own recipies you've created for other users to download, use, and comment on.</p>
         </div>
@@ -81,8 +85,8 @@
           <a href="payment.html" aria-label="Sign-Up now and get cooking" class="btn white center">Get Cooking</a>
         </div>
       </div>
-      <div class="unit xs-1 text-center footer white pad-t-1-2" role="contentinfo">
-        <p>© 2015 SAAS <a href="#top">Top</a></p>
+      <div class="unit xs-1 text-center footer white island-1-2" role="contentinfo">
+        <p class="push-none">© 2015 SAAS <a href="#top">Top</a></p>
       </div>
     </footer>
 </body>
