--- a/payment.html
+++ b/payment.html
@@ -39,7 +39,7 @@
 
 <main id="main" role="main">
   <div class="price pad-b-1-2 price">
-  <h1 class="giga gutter pad-t-1-2">Payment Information</h1>
+  <h1 class="tera gutter pad-t-1-2">Payment Information</h1>
 
   <form action="https://formspree.io/jack0329@algonquinlive.com" method="post" class="grid gutter">
     <div class="unit xs-1 s-1 m-1-2 l-1-2">
@@ -82,9 +82,9 @@
       <label for="plan">Plan Type</label>
       <select id="plan" required>
         <option>Select Your Plan</option>
-        <option>Plan 1</option>
-        <option>Plan 2</option>
-        <option>Plan 3</option>
+        <option>Freemium</option>
+        <option>$10/Month</option>
+        <option>$20/Month</option>
       </select>
     </div>
 
@@ -114,7 +114,7 @@
     </fieldset>
   </div>
 
-    <div class="unit xs-1 text-center btn">
+    <div class="unit xs-1 text-center push-1-2 btn">
       <button type="submit">Submit!</button>
     </div>
 
@@ -124,7 +124,7 @@
 </main>
 
 <div class="unit xs-1 text-center footer white island-1-2" role="contentinfo">
-  <p>© 2015 SAAS <a href="#top">Top</a></p>
+  <p class="push-none">© 2015 SAAS <a href="#top">Top</a></p>
 </div>
 </footer>
 </body>
