Adjusted the size of the icons.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 
 <header id="top" class="masthead grid grid-middle text-center white">
     <div class="unit xs-1 text-right">
+    <img class="logo left island-1-2" src="images/logo.svg" alt="Virtual Cookbook logo" />
     <input type="checkbox" class="nav-check" id="nav-check">
   	<!-- This is the button we’d click to open/close the navigation -->
-  	<label class="nav-label island-1-2" for="nav-check">Menu</label>
+  	<label class="nav-label giga island-1-2" for="nav-check">Menu</label>
   	<nav class="nav" id="nav" role="navigation">
       <ul class="list-group text-right">
         <li><a class="island-1-2 inline-block pad-b 1-2" href="index.html">Home</a></li>
