--- a/tour.html
+++ b/tour.html
@@ -23,6 +23,7 @@
 
   <header id="top" class="masthead grid grid-middle text-center white">
     <div class="unit xs-1 text-right">
+      <img class="logo left island-1-2" src="images/logo.svg" alt="Virtual Cookbook logo" />
       <input type="checkbox" class="nav-check" id="nav-check">
     	<!-- This is the button we’d click to open/close the navigation -->
     	<label class="nav-label island-1-2" for="nav-check">Menu</label>
@@ -52,7 +53,7 @@
 
       <div class="ltgrey unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
-          <img class="svgbig left" src="images/magnafyingglass.svg" alt="magnafying glass icon" />
+          <img class="svgbig left" src="images/magnafyingglass.svg" alt="magnafying glass icon"/>
           <h2 class="giga text-center">Discover Something New</h2>
           <p class="text-left">Browse through other user’s public cookbooks and find new and unique recipies for you to make and try yourself.</p>
         </div>
@@ -60,7 +61,7 @@
 
       <div class="tour unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
-          <img class="svgbig left" src="images/checkmark.svg" alt="checkmark icon icon" />
+          <img class="svgbig left" src="images/checkmark.svg" alt="checkmark icon icon"/>
           <h2 class="giga text-center">Make Your's Unique</h2>
           <p class="text-left">Customize the colour, fonts, and layout of your cookbook. Organize the recipies in your cookbook anyway you like.</p>
         </div>
@@ -68,7 +69,7 @@
 
       <div class="ltgrey unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
-          <img class="svgbig left" src="images/star.svg" alt="star icon" />
+          <img class="svgbig left" src="images/star.svg" alt="star icon"/>
           <h2 class="giga text-center">Show Off Your Skills</h2>
           <p class="text-left">Upload and share any of your own recipies you've created for other users to download, use, and comment on.</p>
         </div>
