Updated the pricing descriptions.

--- a/prices.html
+++ b/prices.html
@@ -57,14 +57,14 @@
     <h3 class="giga push-none text-center">$10/Month</h3>
   </div>
   <div class="ltgrey pad-t-1-2 pad-b-1-2 unit xs-1 s-1-2">
-    <p class="text-left push-none gutter">One month free, the virtual cookbook can hold 50 recipes.</p>
+    <p class="text-left push-none gutter">Unlimited access to the cookbook but it can only hold 100 recipies.</p>
   </div>
 
   <div class="tour pad-t-1-2 pad-b-1-2 unit xs-1 s-1-2">
       <h3 class="giga push-none text-center">$20/Month</h3>
     </div>
     <div class="ltgrey pad-t-1-2 pad-b-1-2 unit xs-1 s-1-2">
-      <p class="text-left push-none gutter">One month free, the virtual cookbook can hold 50 recipes.</p>
+      <p class="text-left push-none gutter">Unlimited access to the cookbook and unlimited storage for recipies.</p>
     </div>
   </div>
 </main>
