Turned the brand logo into a button.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <header id="top" class="masthead grid grid-middle text-center white">
     <div class="unit xs-1 text-right">
-    <img class="logo left island-1-2" src="images/logo.svg" alt="Virtual Cookbook logo" />
+      <a href="index.html"><img class="logo left island-1-2" src="images/logo.svg" alt="Virtual Cookbook logo"/></a>
     <input type="checkbox" class="nav-check" id="nav-check">
   	<!-- This is the button we’d click to open/close the navigation -->
   	<label class="nav-label giga island-1-2" for="nav-check">Menu</label>
@@ -46,7 +46,7 @@
       </div>
       <div class="widthb center">
         <p class="caption giga">Space for cooking enthusiasts to store recipes.</p>
-        <a href="payment.html" class="btn white">Get Cooking</a>
+        <a href="payment.html" class="btn white">Sign Up!</a>
       </div>
     </div>
 </header>
