--- a/payment.html
+++ b/payment.html
@@ -23,7 +23,7 @@
 
   <header id="top" class="masthead grid grid-middle text-center white">
     <div class="unit xs-1 text-right">
-      <img class="logo left island-1-2" src="images/logo.svg" alt="Virtual Cookbook logo" />
+      <a href="index.html"><img class="logo left island-1-2" src="images/logo.svg" alt="Virtual Cookbook logo"/></a>
       <input type="checkbox" class="nav-check" id="nav-check">
     	<!-- This is the button we’d click to open/close the navigation -->
     	<label class="nav-label island-1-2" for="nav-check">Menu</label>
