Fixed the submit button and fixed the banner "role" issue.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <li><a href="#nav">Skip to navigation</a></li>
 </ul>
 
-<header id="top" class="masthead grid grid-middle text-center white">
+<header id="top" class="masthead grid grid-middle text-center white" role="banner">
     <div class="unit xs-1 text-right">
       <a href="index.html"><img class="logo left island-1-2" src="images/logo.svg" alt="Virtual Cookbook logo"/></a>
     <input type="checkbox" class="nav-check" id="nav-check">
@@ -38,7 +38,7 @@
   </div>
     <div class="unit xs-1 s-1 m-1 l-1 pad-b-2">
       <div class="widths center">
-        <h1 class="pad-t-2 unit-m-tera" role="banner">
+        <h1 class="pad-t-2 unit-m-tera">
           <span>CREATE.</span>
           <span>COOK.</span>
           <span>SHARE.</span>
@@ -68,7 +68,7 @@
     <div>
       <img class="svg left" src="images/money.svg" alt="dollar sign icon" />
       <h2 class="giga text-center">Pricing & Plans</h2>
-      <p class="text-left">Make your account for free or choose a premium account to getexclusive benefits and more storage space for recipies</p>
+      <p class="text-left">Make your account for free or choose a premium account to get exclusive benefits and more storage space for recipies</p>
     </div>
     <div class="text-center">
       <a href="prices.html" class="btn white center">Learn  More</a>
