--- a/payment.html
+++ b/payment.html
@@ -21,7 +21,7 @@
   <li><a href="#nav">Skip to navigation</a></li>
 </ul>
 
-  <header id="top" class="masthead grid grid-middle text-center white">
+  <header id="top" class="masthead grid grid-middle text-center white" role="banner">
     <div class="unit xs-1 text-right">
       <a href="index.html"><img class="logo left island-1-2" src="images/logo.svg" alt="Virtual Cookbook logo"/></a>
       <input type="checkbox" class="nav-check" id="nav-check">
@@ -105,7 +105,7 @@
     </div>
 
     <fieldset>
-      <legend>Would you like to recieve emails on deals and promotions</legend>
+      <legend class="pad-t-2">Would you like to recieve emails on deals and promotions</legend>
 
       <input id="yes" type="radio" name="answer">
       <label for="yes">Yes</label>
@@ -115,8 +115,8 @@
     </fieldset>
   </div>
 
-    <div class="unit xs-1 text-center push-1-2 btn">
-      <button type="submit">Submit!</button>
+    <div class="unit xs-1 text-center push-1-2">
+      <button class="btn btn-submit" type="submit">Submit!</button>
     </div>
 
     <input type="hidden" name="_next"
