--- a/prices.html
+++ b/prices.html
@@ -21,7 +21,7 @@
   <li><a href="#nav">Skip to navigation</a></li>
 </ul>
 
-  <header id="top" class="masthead grid grid-middle text-center white">
+  <header id="top" class="masthead grid grid-middle text-center white" role="banner">
     <div class="unit xs-1 text-right">
       <a href="index.html"><img class="logo left island-1-2" src="images/logo.svg" alt="Virtual Cookbook logo"/></a>
       <input type="checkbox" class="nav-check" id="nav-check">
