--- a/tour.html
+++ b/tour.html
@@ -37,7 +37,7 @@
     	</nav>
     </div>
   </header>
-    <main class="grid grid-middle black" id="main" role="main">
+    <main class="grid grid-stretch black" id="main" role="main">
         <div class="unit island  xs-1 s-1 m-1 l-1 xl-1 gutter text-center island-2">
             <h1 class="tera push-none">Take a Tour</h1>
             <p class="text-center mega">See what we have to offer!</p>
